Make test work with FX8